# kss

./: README.md  print_params.py  run.sh
src/: .clang-format
src/automation_interface/: CMakeLists.txt  package.xml
src/automation_interface/scripts/: automation_interface.py
src/commons/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
src/commons/action/: AutomationProcess.action  DroneCommunicationProcess.action  FTPServerProcess.action  HttpClientProcess.action  HttpServerProcess.action  MeteoProcess.action  PowerManagementProcess.action  RotorProcess.action  TrackerProcess.action
src/commons/msg/: DroneState.msg  HttpExposedResourcesContent.msg  HttpServerSimpleEvent.msg  MissionsUploadedEvent.msg  RotorAbsolutePosition.msg  RotorRelativePosition.msg  SendImagesToServerEvent.msg  StationError.msg  StationState.msg  TrackerConnectionSignal.msg
src/commons/scripts/data_models/: com_client.py  kss_clients.py  kss_server.py  meteo.py
src/commons/scripts/enums/: automation.py  com_client.py  kss_core.py  meteo.py  rotor.py  tracker.py
src/commons/scripts/exposed_resources/: http_exposed_resources.py
src/commons/scripts/http_io/: http_receiver.py  http_sender.py  mission_model.py  simple_http_sender.py  simple_server_entities.py
src/commons/scripts/i2c_io/: i2c_device.py
src/commons/scripts/modbus/: modbus.py
src/commons/scripts/module_io/: io_entities.py  module_interface.py  sockets.py
src/commons/scripts/module_utils/: signal_handlers.py
src/commons/scripts/serial_io/: pipe_serial.py
src/commons/srv/: AutomationStates.srv  DroneSimpleTask.srv  SwitchModulePower.srv  TryDroneStart.srv  TryLand.srv  TryUploadMission.srv
src/core/: CMakeLists.txt  package.xml  setup.py
src/core/param/: dynamic_params.yml
src/core/scripts/: core.py  tests.py
src/core/scripts/core_internals/: collectors.py  containers.py  flags_checker.py  mission_storage.py  module_controllers.py  parameters.py  station_states.py
src/ftp_server/: CMakeLists.txt  package.xml
src/ftp_server/scripts/: ftp_server.py
src/http_bridge/: CMakeLists.txt  package.xml  setup.py
src/http_bridge/scripts/: com_client.py  http_client.py  http_server.py
src/http_bridge/scripts/com_client_internal/: com_client_senders.py
src/http_bridge/scripts/gui_client/: image_sender.py  kss_client_senders.py
src/http_bridge/scripts/server/: kss_receiver.py  upload_mission_event.py
src/meteo/: CMakeLists.txt  package.xml
src/meteo/scripts/: meteo.py
src/power_management/: CMakeLists.txt  notes.txt  package.xml
src/power_management/scripts/: power_management.py
src/rotor/: package.xml
src/rotor/scripts/: rotor_backup.py
src/tracker/: CMakeLists.txt  package.xml
src/tracker/scripts/: tracker.py
