<?xml version="1.0"?>
<package format="2">
  <name>automation_interface</name>
  <version>0.0.0</version>
  <description>The automation_interface package</description>

  <maintainer email="damiano@todo.todo">damiano</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_runtime</depend>
  <depend>commons</depend>



</package>
