<?xml version="1.0"?>
<package format="2">
    <name>commons</name>
    <version>0.0.0</version>
    <description>The testpkg package</description>

    <maintainer email="damiano@todo.todo">damiano</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>actionlib</depend>
    <depend>message_generation</depend>
    <depend>std_msgs</depend>
    <depend>message_runtime</depend>
</package>
